--- a/ai-server/requirements.txt
+++ b/ai-server/requirements.txt
@@ -3,7 +3,7 @@ uvicorn==0.24.0
 requests==2.31.0
 pydantic==2.5.0
 python-dotenv==1.0.0
-openai==1.3.7
+openai>=1.6.1
 langchain==0.0.350
 langchain-openai==0.0.2
 python-multipart==0.0.6
