--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       POSTGRES_USER: yogin_user
       POSTGRES_PASSWORD: yogin_password
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
@@ -97,7 +97,9 @@ services:
       - "80:80"
       - "443:443"
     volumes:
+      # Проверьте, что ./nginx/nginx.conf — это файл, а не папка
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      # Проверьте, что ./nginx/ssl — это папка, содержащая ваши сертификаты
       - ./nginx/ssl:/etc/nginx/ssl
     depends_on:
       - backend
@@ -113,4 +115,4 @@ volumes:
 
 networks:
   yogin-network:
-    driver: bridge 
+    driver: bridge
